finished setting up the file framework

--- a/searchResult.html
+++ b/searchResult.html
@@ -10,6 +10,6 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
-    <script src="./assets/js/homepageScript.js"></script>
+    <script src="./assets/js/searchResult.js"></script>
   </body>
 </html>
