--- a/index.html
+++ b/index.html
@@ -5,6 +5,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Music Magic</title>
+    <!-- Bootstrap -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div
+        class="container d-flex flex-column align-items-center mt-3 searchBox"
+      >
+        <img
+          class="m-3"
+          id="logo"
+          src="http://placekitten.com/200/200"
+          alt="Music Magic Logo"
+        />
+        <form class="input-group mb-3">
+          <input
+            type="text"
+            class="form-control"
+            placeholder="Search artist, song, or lyrics."
+            aria-describedby="basic-addon1"
+          />
+        </form>
+        <button
+          type="button"
+          class="btn btn-info ml-auto mb-3 mr-1 align-self-end"
+        >
+          Search
+        </button>
+      </div>
+    </header>
+    <!-- jquery -->
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="./assets/js/script.js"></script>
+  </body>
 </html>
